# Colorer-library

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL  LICENSE  README  README.md  build.properties  build.user.properties.template  catalog.xml  changelog  common.xml  conanfile.txt  icu_unicodestring_prettyprinter.py  vcpkg-configuration.json  vcpkg.json
doc/: notes.txt
src/: CMakeLists.txt  _buildlines.pl  _dependencies.dep  _makefile.deps.pl  branches  makefile.colorer.cygwin  makefile.colorer.gcc  makefile.colorer.solarisgcc  makefile.colorer.vc
src/colorer/: Common.h  ConsoleToolsRunner.cpp  ErrorHandler.h  Exception.h  FileType.h  HRCParser.h  HrcLibrary.h  LineSource.h  ParserFactory.cpp  ParserFactory.h  ParserFactoryException.h  Region.h  RegionHandler.h  Scheme.h  TextParser.h  _template.h  colorer.vcxproj  colorer.vcxproj.filters  makefile.bcc  makefile.core  makefile.cygwin  makefile.gcc  makefile.solarisgcc  makefile.vc  version.h
src/colorer/base/: XmlTagDefs.h
src/colorer/common/: Character.cpp  Character.h  Colorer.cpp  Colorer.h  Common.h  Encodings.cpp  Encodings.h  Exception.cpp  Features.h  Features.h.in  Logger.cpp  Logger.h  MemoryChunks.cpp  MemoryChunks.h  UStr.cpp  UStr.h  UnicodeLogger.h  UnicodeString.cpp  UnicodeString.h  UnicodeStringContainer.h  UnicodeTools.cpp  UnicodeTools.h
src/colorer/cregexp/: cregexp.cpp  cregexp.h
src/colorer/editor/: BaseEditor.cpp  BaseEditor.h  EditorListener.h  OutlineItem.h  Outliner.cpp  Outliner.h  PairMatch.h
src/colorer/handlers/: LineRegion.cpp  LineRegion.h  LineRegionsCompactSupport.cpp  LineRegionsCompactSupport.h  LineRegionsSupport.cpp  LineRegionsSupport.h  RegionDefine.h  RegionMapper.cpp  RegionMapper.h  RegionMapperImpl.cpp  RegionMapperImpl.h  StyledHRDMapper.cpp  StyledHRDMapper.h  StyledRegion.cpp  StyledRegion.h  TextHRDMapper.cpp  TextHRDMapper.h  TextRegion.cpp  TextRegion.h
src/colorer/io/: FileInputSource.cpp  FileInputSource.h  FileWriter.cpp  FileWriter.h  HTTPInputSource.cpp  HTTPInputSource.h  InputSource.cpp  InputSource.h  JARInputSource.cpp  JARInputSource.h  MemoryFile.cpp  MemoryFile.h  SharedInputSource.cpp  SharedInputSource.h  StreamWriter.cpp  StreamWriter.h  Writer.cpp  Writer.h
src/colorer/parsers/: CatalogParser.cpp  CatalogParser.h  FileType.cpp  FileTypeChooser.h  FileTypeImpl.cpp  FileTypeImpl.h  HRCParser.cpp  HRCParserHelpers.cpp  HRCParserHelpers.h  HRCParserImpl.cpp  HRCParserImpl.h  HRDNode.h  HrcLibrary.cpp  HrcLibraryImpl.cpp  HrcLibraryImpl.h  KeywordList.cpp  KeywordList.h  ParserFactory.cpp  ParserFactory.h  ParserFactoryException.h  ParserFactoryImpl.cpp  ParserFactoryImpl.h  SchemeImpl.h  SchemeNode.cpp  SchemeNode.h  TextParser.cpp  TextParserHelpers.cpp  TextParserHelpers.h  TextParserImpl.cpp  TextParserImpl.h  VirtualEntry.h  XmlTagDefs.h
src/colorer/platform/: filesystem.hpp
src/colorer/strings/: XMLChLiteral.h
src/colorer/unicode/: BitArray.cpp  BitArray.h  CString.cpp  CString.h  Character.cpp  Character.h  CharacterClass.cpp  CharacterClass.h  CommonString.h  DString.cpp  DString.h  Encodings.cpp  Encodings.h  SString.cpp  SString.h  String.cpp  String.h  StringBuffer.cpp  StringBuffer.h  UnicodeTools.cpp  UnicodeTools.h  x_charcategory.h  x_charcategory2.h  x_encodings.pl  x_tables_generator.pl
src/colorer/utils/: Environment.cpp  Environment.h  LogFileSink.cpp  LogFileSink.h
src/colorer/viewer/: ConsoleTools.cpp  ConsoleTools.h  ParsedLineWriter.cpp  ParsedLineWriter.h  TextConsoleViewer.cpp  TextConsoleViewer.h  TextLinesStore.cpp  TextLinesStore.h
src/colorer/xml/: BaseEntityResolver.cpp  BaseEntityResolver.h  LocalFileXmlInputSource.cpp  LocalFileXmlInputSource.h  MemoryFile.cpp  SharedXmlInputSource.cpp  SharedXmlInputSource.h  XMLNode.h  XStr.cpp  XStr.h  XercesXml.h  XmlInputSource.cpp  XmlInputSource.h  XmlParserErrorHandler.cpp  XmlParserErrorHandler.h  XmlReader.cpp  XmlReader.h  XmlTagDefs.h  ZipXmlInputSource.cpp  ZipXmlInputSource.h
src/colorer/zip/: MemoryFile.cpp  MemoryFile.h
src/common/: Colorer.cpp  Colorer.h  Common.h  Exception.cpp  Exception.h  Features.h  Logging.cpp  MemoryChunks.cpp  MemoryOperator.h
src/common/io/: FileInputSource.cpp  FileInputSource.h  FileWriter.h  HTTPInputSource.cpp  HTTPInputSource.h  InputSource.cpp  InputSource.h  JARInputSource.cpp  JARInputSource.h  MemoryFile.cpp  MemoryFile.h  SharedInputSource.cpp  SharedInputSource.h  StreamWriter.cpp  StreamWriter.h
src/cregexp/: cregexp.cpp  cregexp.h
src/hrdsets/: hrdsets.cpp  makefile.bcc
src/icolorer/: icolorer.cpp  icolorer.def  ishared.cpp  makefile.bcc  makefile.cygwin
src/icolorer/objs/: .empty
src/shared/: _makefile.deps  makefile.colorer.bcc  makefile.colorer.vc  makefile.lines  makefile.objs  makefile.zlib
src/unicode/: BitArray.cpp  BitArray.h  Character.cpp  Character.h  CharacterClass.cpp  DString.cpp  DString.h  Encodings.cpp  Encodings.h  SString.cpp  SString.h  String.cpp  String.h  StringBuffer.cpp  StringBuffer.h  UnicodeTools.cpp  x_charcategory_names.h  x_defines.h  x_encodings.h  x_tables.h
src/utils/: LogFileSink.cpp  LogFileSink.h
src/xml/: BaseEntityResolver.cpp  BaseEntityResolver.h  LocalFileXmlInputSource.cpp  LocalFileXmlInputSource.h  SharedXmlInputSource.cpp  SharedXmlInputSource.h  XStr.cpp  XStr.h  XmlInputSource.cpp  XmlInputSource.h  XmlParserErrorHandler.cpp  XmlParserErrorHandler.h  XmlTagDefs.h  ZipXmlInputSource.cpp  ZipXmlInputSource.h  xmldom.cpp  xmldom.h
tests/: CMakeLists.txt
tests/hrd_mapper/: hrdmapper.cpp
tests/performance/: test_speed.cpp  tests.cpp  tests.h
tests/unit/: CMakeLists.txt  TestLogger.h  test_common.h  test_environment.cpp  test_exception.cpp  test_filetype.cpp  test_hrcparsing.cpp  test_main.cpp  test_xerces_xmlinputsource.cpp  test_xmlinputsource.cpp  test_xmlreader.cpp
tools/colorer/: CMakeLists.txt  ConsoleTools.cpp  ConsoleTools.h  ConsoleToolsRunner.cpp  ConsoleToolsRunner.rc  SimpleLogger.cpp  SimpleLogger.h  colorer.vcproj  colorer_vs2008.sln  colorer_vs2010.sln  makefile.macos  version.h
(+188 files in other folders)
